gac_sb/objects/AppATctn__c.object
<CustomObject>
    <description>APPLICATION AT</description>
    <fields>
        <fullName>Annee__c</fullName>
        <label>Année</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMIP1__c</fullName>
        <label>CCM IP1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCMIP2__c</fullName>
        <label>CCM IP2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCMIP3__c</fullName>
        <label>CCM IP3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCMIT1__c</fullName>
        <label>CCM IT1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCMIT2__c</fullName>
        <label>CCM IT2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCMIT3__c</fullName>
        <label>CCM IT3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IdentifiantCTN__c</fullName>
        <externalId>true</externalId>
        <label>Identifiant CTN</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TypeCTN__c</fullName>
        <label>Type CTN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>BAM</fullName>
                </value>
                <value>
                    <fullName>BGO</fullName>
                </value>
                <value>
                    <fullName>BSO</fullName>
                </value>
                <value>
                    <fullName>BSS</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>DD</fullName>
                </value>
                <value>
                    <fullName>EE</fullName>
                </value>
                <value>
                    <fullName>FF</fullName>
                </value>
                <value>
                    <fullName>GG</fullName>
                </value>
                <value>
                    <fullName>HH</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CTN</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <nameField>
        <label>Nom de CTN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CTN</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AppAT_CTN_Annee</fullName>
        <active>true</active>
        <errorConditionFormula>IF(LEFT(Annee__c,1)=&apos;2&apos;, 
NOT(REGEX( Annee__c, &apos;[2]{1}[0]{1}[0-9]{2}&apos;)), 
NOT(REGEX( Annee__c, &apos;[1]{1}[9]{1}[0-9]{2}&apos;)) 
)</errorConditionFormula>
        <errorDisplayField>Annee__c</errorDisplayField>
        <errorMessage>L&apos;année doit être au format 20XX ou 19XX</errorMessage>
    </validationRules>
</CustomObject>